Feat: Layout making: Popup Tab in Submission, Layout Landing User, Layout Sidebar, Layout Dashboard. Integrastion: Register: Register user (haven't yet)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .background-blend {
-  background: url("../../public/assets/images/background-login-1.png") no-repeat
-    center;
-
-  background-size: 90%;
-  width: 100%;
-} */
+html {
+  scroll-behavior: smooth;
+}
 
 .verticalScroll {
   width: 100%;
@@ -18,4 +14,8 @@
 
 .verticalScroll::-webkit-scrollbar {
   display: none;
+}
+
+.background-about-us {
+  background-color: rgba(53, 114, 239);
 }
