Feat: Layout: Responsive Dashboard User, Humburger Menu Mobile, Application History Card, Drawer Application Button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@ html {
   /* scroll-padding-top: 6rem; */
 }
 
+body {
+  background: #f6f6f6;
+}
+
 .verticalScroll {
   width: 100%;
   overflow-y: scroll;
