--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,14 +45,14 @@ body {
   background-position: center;
 }
 
+/* EMBLA News */
 .embla {
-  /* max-width: 48rem;
-  margin: auto; */
+  /* max-width: 48rem; */
+  /* margin: auto; */
   --slide-height: 19rem;
   --slide-spacing: 1rem;
   --slide-size: 40%;
 }
-
 .embla__container {
   display: flex;
   touch-action: pan-y pinch-zoom;
@@ -61,6 +61,7 @@ body {
 .embla__slide {
   transform: translate3d(0, 0, 0);
   flex: 0 0 var(--slide-size);
+  margin: 0 10px;
   /* min-width: 0; */
   /* padding-left: var(--slide-spacing); */
 }
@@ -177,4 +178,13 @@ body {
 }
 .embla__dot--selected:after {
   box-shadow: inset 0 0 0 0.2rem #fc6736;
+}
+
+/* Embla Organization */
+.embla_organization {
+  /* max-width: 48rem; */
+  /* margin: auto; */
+  --slide-height: 19rem;
+  --slide-spacing: 1rem;
+  --slide-size: 55%;
 }
