--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,8 +51,17 @@ body {
   /* margin: auto; */
   --slide-height: 19rem;
   --slide-spacing: 1rem;
-  --slide-size: 40%;
+  --slide-size: 31.5%;
 }
+
+.embla_mobile {
+  /* max-width: 48rem; */
+  /* margin: auto; */
+  --slide-height: 19rem;
+  --slide-spacing: 1rem;
+  --slide-size: 100%;
+}
+
 .embla__container {
   display: flex;
   touch-action: pan-y pinch-zoom;
@@ -88,7 +97,7 @@ body {
 .embla__buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 0.6rem;
+  gap: 2rem;
   align-items: center;
 }
 .embla__button {
@@ -104,8 +113,8 @@ body {
   padding: 0;
   margin: 0;
   box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
-  width: 3.6rem;
-  height: 3.6rem;
+  width: 3.2rem;
+  height: 3.2rem;
   z-index: 1;
   border-radius: 50%;
   color: #3572ef;
