--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,7 +51,9 @@ body {
   /* margin: auto; */
   --slide-height: 19rem;
   --slide-spacing: 1rem;
-  --slide-size: 31.5%;
+  --slide-size: 31.1%;
+  /* --slide-size: calc(100% / 3); */
+  width: 100%;
 }
 
 .embla_mobile {
@@ -60,17 +62,62 @@ body {
   --slide-height: 19rem;
   --slide-spacing: 1rem;
   --slide-size: 100%;
+  width: 100%;
+  /* margin-right: 3rem; */
+}
+
+.embla.fullscreen .embla__slide {
+  flex: 0 0 calc(100% / 4.3); /* Menampilkan 5 item saat fullscreen */
+}
+
+.carousel-wrapper {
+  transition:
+    opacity 0.7s ease-in-out,
+    visibility 0.7s ease-in-out;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-100%); /* Start off-screen to the left */
+    opacity: 0; /* Start fully transparent */
+  }
+  100% {
+    transform: translateX(0); /* End at original position */
+    opacity: 1; /* Fully opaque */
+  }
+}
+
+/* Class to apply the slide-in animation */
+.slide-in {
+  animation: slideIn 1.5s ease-in-out forwards; /* Slide in from left */
+}
+
+/* Hide the element completely */
+.hidden {
+  display: none; /* Completely remove from layout */
+}
+
+/* You can also use a class for opacity transition */
+.opacity-hidden {
+  opacity: 0; /* Start off transparent */
+  transition: opacity 0.5s ease-in-out; /* Smooth fade */
+}
+
+.opacity-visible {
+  opacity: 1; /* Fully opaque */
+  transition: opacity 0.5s ease-in-out; /* Smooth fade */
 }
 
 .embla__container {
   display: flex;
   touch-action: pan-y pinch-zoom;
+  transition: transform 0.3s ease;
   /* margin-left: calc(var(--slide-spacing) * -1); */
 }
 .embla__slide {
   transform: translate3d(0, 0, 0);
   flex: 0 0 var(--slide-size);
-  margin: 0 10px;
+  margin: 0;
   /* min-width: 0; */
   /* padding-left: var(--slide-spacing); */
 }
