--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,51 @@ body {
   background-position: center;
 }
 
+.background-mission-first {
+  background:
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)),
+    url("../../public/assets/images/misi-1.png") no-repeat center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-position: center;
+}
+
+.background-mission-second {
+  background:
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)),
+    url("../../public/assets/images/misi-2.png") no-repeat center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-position: center;
+}
+
+.background-mission-third {
+  background:
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)),
+    url("../../public/assets/images/misi-3.png") no-repeat center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-position: center;
+}
+
+.background-mission-fourth {
+  background:
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)),
+    url("../../public/assets/images/misi-4.png") no-repeat center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-position: center;
+}
+
+.background-mission-fifth {
+  background:
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9)),
+    url("../../public/assets/images/misi-5.png") no-repeat center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-position: center;
+}
+
 /* EMBLA News */
 .embla {
   /* max-width: 48rem; */
